RBT-57 fixed the spacing on the home page

--- a/frontend/src/components/Card/CardHome.css
+++ b/frontend/src/components/Card/CardHome.css
@@ -1,3 +1,8 @@
 .p-card {
     width: 500px;
 }
+
+.card-center {
+    display: flex;
+    justify-content: center;
+}
